ipad spacing issues

--- a/_sass/4-pages/_nav.sass
+++ b/_sass/4-pages/_nav.sass
@@ -39,13 +39,13 @@
   .nav-wrapper
     background: #FFF
     right: 0
-    margin: 0 0 40px
+    margin: -25px 0 40px
     position: relative
     width: 100%
 
   #nav-title
     color: #000
-    margin: 18px 20px 0
+    margin: 18px 20px -10px
 
   #nav-title li
     color: #000
